Editando un poco el navbar, agregando secciones e imagenes

--- a/index.html
+++ b/index.html
@@ -9,44 +9,48 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#home">
+            <img src="img/logo.png" alt="" width="300px">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+                <a class="nav-link" href="#about">Sobre nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="#services">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contactanos</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
+            <!---<form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            </form>--->
           </div>
         </div>
       </nav>
     <section id="home">
-        <h1>Hello, world!</h1>
+        <h1>Nuestro origen</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, necessitatibus odit. Esse, libero veniam? Excepturi nam quasi delectus aliquam assumenda sapiente. Ex eveniet libero excepturi, sit saepe, soluta explicabo officia, culpa minima iure odit! Delectus, voluptatum excepturi. Autem sunt eligendi labore architecto? Nobis tenetur pariatur corporis delectus laboriosam rem exercitationem doloribus ab! Aut voluptas sequi voluptatum modi. Magni ut, blanditiis laborum officiis tenetur voluptas, itaque sunt modi minus nam dignissimos assumenda architecto incidunt at distinctio eligendi, corrupti quis aut! Maxime deserunt porro veritatis numquam corporis obcaecati itaque natus magni! At officia mollitia iste dolor voluptate tempora, sequi nesciunt molestiae asperiores.</p>
+    </section>
+    <section id="about">
+      <h1>Sobre nosotros</h1>
+    </section>
+    <section id="services">
+      <h1>Servicios</h1>
+    </section>
+    <section id="contact">
+      <h1>Contactanos</h1>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
