Editando y arreglando la parte del home

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
@@ -40,8 +40,10 @@
         </div>
       </nav>
     <section id="home">
+      <div id="container-home" class="">
         <h1>Nuestro origen</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, necessitatibus odit. Esse, libero veniam? Excepturi nam quasi delectus aliquam assumenda sapiente. Ex eveniet libero excepturi, sit saepe, soluta explicabo officia, culpa minima iure odit! Delectus, voluptatum excepturi. Autem sunt eligendi labore architecto? Nobis tenetur pariatur corporis delectus laboriosam rem exercitationem doloribus ab! Aut voluptas sequi voluptatum modi. Magni ut, blanditiis laborum officiis tenetur voluptas, itaque sunt modi minus nam dignissimos assumenda architecto incidunt at distinctio eligendi, corrupti quis aut! Maxime deserunt porro veritatis numquam corporis obcaecati itaque natus magni! At officia mollitia iste dolor voluptate tempora, sequi nesciunt molestiae asperiores.</p>
+      </div>
     </section>
     <section id="about">
       <h1>Sobre nosotros</h1>
