Arreglando el origen y a la vez poniendo un nuevo logo en la pestana

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>VitalPharm</title>
-    <link rel="icon" id="icono" href="img/logo-pestana.svg" type="image/x-icon">
+    <link rel="icon" id="icono" href="img/logo-pestana.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
@@ -41,12 +41,43 @@
       </nav>
     <section id="home">
       <div id="container-home" class="">
-        <h1>Nuestro origen</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, necessitatibus odit. Esse, libero veniam? Excepturi nam quasi delectus aliquam assumenda sapiente. Ex eveniet libero excepturi, sit saepe, soluta explicabo officia, culpa minima iure odit! Delectus, voluptatum excepturi. Autem sunt eligendi labore architecto? Nobis tenetur pariatur corporis delectus laboriosam rem exercitationem doloribus ab! Aut voluptas sequi voluptatum modi. Magni ut, blanditiis laborum officiis tenetur voluptas, itaque sunt modi minus nam dignissimos assumenda architecto incidunt at distinctio eligendi, corrupti quis aut! Maxime deserunt porro veritatis numquam corporis obcaecati itaque natus magni! At officia mollitia iste dolor voluptate tempora, sequi nesciunt molestiae asperiores.</p>
+        <h1 class="fw-bold fs-1 text-center text-light mb-4">Origen y Fundacion</h1>
+        <p class="fs-5">
+          La farmacia VitalPharm tuvo sus humildes comienzos en el corazón de nuestra comunidad. Fundada en 2015, 
+          la farmacia ha sido un pilar esencial en el cuidado de la salud local, sirviendo como un faro de atención 
+          y asesoramiento farmacéutico para generaciones de residentes.
+          La visión detrás de la creación de VitalPharm se arraiga en la firme creencia de que el acceso a 
+          servicios farmacéuticos de calidad es fundamental para el bienestar de la comunidad. La fundadora, 
+          Petronila Gonzales, una farmacéutica apasionada con décadas de experiencia, sintió la necesidad apremiante de ofrecer un espacio donde los individuos pudieran recibir 
+          atención personalizada y acceder a medicamentos de calidad con facilidad. <br><br>
+
+          El objetivo inicial era simple pero poderoso: establecer un punto de referencia en la comunidad 
+          para la atención farmacéutica centrada en el paciente. La fundadora, después de años de trabajar 
+          en diversas farmacias y comprender las necesidades específicas de la comunidad, decidió dar un 
+          paso audaz y fundar su propia farmacia.
+          Desde sus primeros días, VitalPharm se comprometió a proporcionar servicios que trascienden la 
+          simple dispensación de medicamentos. La farmacia se convirtió en un lugar donde la gente podía 
+          recibir asesoramiento farmacéutico personalizado, educación sobre el manejo de enfermedades 
+          crónicas y apoyo continuo en su búsqueda de una vida más saludable.A lo largo de los años, la 
+          farmacia ha evolucionado para adaptarse a las cambiantes necesidades de la comunidad. 
+          La incorporación de tecnología de vanguardia, la expansión de servicios de atención al paciente 
+          y la colaboración con profesionales de la salud locales son testimonios de la dedicación constante 
+          para proporcionar un cuidado integral. <br><br>
+
+          Hoy en día, VitalPharm se erige como un faro de confianza y compasión en la comunidad. La farmacia 
+          ha superado desafíos y ha celebrado triunfos, pero su esencia sigue siendo la misma: brindar un 
+          servicio farmacéutico de calidad que no solo trata las enfermedades, sino que también nutre la relación 
+          de la farmacia con la comunidad. Cada paso dado desde la fundación ha estado guiado por la premisa 
+          de mejorar la salud y el bienestar de aquellos a quienes servimos. VitalPharm sigue siendo un testimonio 
+          vivo de cómo una visión apasionada y el compromiso con la atención al paciente pueden florecer y dejar 
+          un impacto duradero en la salud de la comunidad.
+        </p>
       </div>
     </section>
     <section id="about">
+      <div id="container-about">
       <h1>Sobre nosotros</h1>
+      </div>
     </section>
     <section id="services">
       <h1>Servicios</h1>
