--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
           y asesoramiento farmacéutico para generaciones de residentes.
           La visión detrás de la creación de VitalPharm se arraiga en la firme creencia de que el acceso a 
           servicios farmacéuticos de calidad es fundamental para el bienestar de la comunidad. La fundadora, 
-          Petronila Gonzales, una farmacéutica apasionada con décadas de experiencia, sintió la necesidad apremiante de ofrecer un espacio donde los individuos pudieran recibir 
-          atención personalizada y acceder a medicamentos de calidad con facilidad. <br><br>
+          Petronila Gonzales, una farmacéutica apasionada con décadas de experiencia, sintió la necesidad apremiante 
+          de ofrecer un espacio donde los individuos pudieran recibiratención personalizada y acceder a medicamentos
+          de calidad con facilidad. <br><br>
 
           El objetivo inicial era simple pero poderoso: establecer un punto de referencia en la comunidad 
           para la atención farmacéutica centrada en el paciente. La fundadora, después de años de trabajar 
