editando la parte sobre nosotros e inicio de servicios

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
     <section id="home">
       <div id="container-home" class="">
-        <h1 class="fw-bold fs-1 text-center text-light mb-4">Origen y Fundacion</h1>
+        <h1 class="fw-bold fs-1 text-center mb-4">Origen y Fundacion</h1>
         <p class="fs-5">
           La farmacia VitalPharm tuvo sus humildes comienzos en el corazón de nuestra comunidad. Fundada en 2015, 
           la farmacia ha sido un pilar esencial en el cuidado de la salud local, sirviendo como un faro de atención 
@@ -76,12 +76,32 @@
       </div>
     </section>
     <section id="about">
-      <div id="container-about">
-      <h1>Sobre nosotros</h1>
+      <div>
+        <img src="/img/ola2.svg" alt="">
+      </div>
+      <h1 style="margin-top: -180px; margin-left: 75px; margin-bottom: 60px;" class="text-light">Sobre Nosotros</h1>
+      <div class="container" id="container-about">
+        <div class="row">
+          <div class="about-us col-7">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quaerat quisquam quia 
+              quibusdam dolores, aliquid harum suscipit deserunt nemo numquam quis itaque temporibus 
+              ad deleniti asperiores beatae adipisci maxime placeat, nihil optio illo quas ex voluptas. 
+              Inventore similique laborum in blanditiis ullam ipsam sapiente corporis magni quas expedita 
+              eaque ipsum laboriosam natus hic voluptatibus voluptatem repellendus, omnis amet. Nulla quaerat 
+              atque velit unde sint quia tempore asperiores obcaecati exercitationem beatae, non reiciendis 
+              eum nesciunt quod sapiente dolorum illum ullam nihil debitis odit? Praesentium dolorem incidunt 
+              deserunt eligendi aliquidnobis porro placeat accusamus minus rem nulla quibusdam, vitae accusantium 
+              soluta aperiam.</p>
+          </div>
+          <div class="doc col-5">
+              <img src="/img/doctor.jpg"alt="">
+          </div>
+        </div>
       </div>
     </section>
-    <section id="services">
-      <h1>Servicios</h1>
+    <section class="text-center my-5" id="services">
+      <h1 class="text-light">Servicios</h1>
+
     </section>
     <section id="contact">
       <h1>Contactanos</h1>
