--- a/index.html
+++ b/index.html
@@ -39,42 +39,42 @@
           </div>
         </div>
       </nav>
-    <section id="home">
-      <div id="container-home" class="">
-        <h1 class="fw-bold fs-1 text-center mb-4">Origen y Fundacion</h1>
-        <p class="fs-5">
-          La farmacia VitalPharm tuvo sus humildes comienzos en el corazón de nuestra comunidad. Fundada en 2015, 
-          la farmacia ha sido un pilar esencial en el cuidado de la salud local, sirviendo como un faro de atención 
-          y asesoramiento farmacéutico para generaciones de residentes.
-          La visión detrás de la creación de VitalPharm se arraiga en la firme creencia de que el acceso a 
-          servicios farmacéuticos de calidad es fundamental para el bienestar de la comunidad. La fundadora, 
-          Petronila Gonzales, una farmacéutica apasionada con décadas de experiencia, sintió la necesidad apremiante 
-          de ofrecer un espacio donde los individuos pudieran recibiratención personalizada y acceder a medicamentos
-          de calidad con facilidad. <br><br>
-
-          El objetivo inicial era simple pero poderoso: establecer un punto de referencia en la comunidad 
-          para la atención farmacéutica centrada en el paciente. La fundadora, después de años de trabajar 
-          en diversas farmacias y comprender las necesidades específicas de la comunidad, decidió dar un 
-          paso audaz y fundar su propia farmacia.
-          Desde sus primeros días, VitalPharm se comprometió a proporcionar servicios que trascienden la 
-          simple dispensación de medicamentos. La farmacia se convirtió en un lugar donde la gente podía 
-          recibir asesoramiento farmacéutico personalizado, educación sobre el manejo de enfermedades 
-          crónicas y apoyo continuo en su búsqueda de una vida más saludable.A lo largo de los años, la 
-          farmacia ha evolucionado para adaptarse a las cambiantes necesidades de la comunidad. 
-          La incorporación de tecnología de vanguardia, la expansión de servicios de atención al paciente 
-          y la colaboración con profesionales de la salud locales son testimonios de la dedicación constante 
-          para proporcionar un cuidado integral. <br><br>
-
-          Hoy en día, VitalPharm se erige como un faro de confianza y compasión en la comunidad. La farmacia 
-          ha superado desafíos y ha celebrado triunfos, pero su esencia sigue siendo la misma: brindar un 
-          servicio farmacéutico de calidad que no solo trata las enfermedades, sino que también nutre la relación 
-          de la farmacia con la comunidad. Cada paso dado desde la fundación ha estado guiado por la premisa 
-          de mejorar la salud y el bienestar de aquellos a quienes servimos. VitalPharm sigue siendo un testimonio 
-          vivo de cómo una visión apasionada y el compromiso con la atención al paciente pueden florecer y dejar 
-          un impacto duradero en la salud de la comunidad.
-        </p>
-      </div>
-    </section>
+      <section id="home">
+        <div id="container-home" class="">
+          <h1 class="fw-bold fs-1 text-center mb-4">Origen y Fundacion</h1>
+          <p class="fs-5">
+            La farmacia VitalPharm tuvo sus humildes comienzos en el corazón de nuestra comunidad. Fundada en 2015, 
+            la farmacia ha sido un pilar esencial en el cuidado de la salud local, sirviendo como un faro de atención 
+            y asesoramiento farmacéutico para generaciones de residentes.
+            La visión detrás de la creación de VitalPharm se arraiga en la firme creencia de que el acceso a 
+            servicios farmacéuticos de calidad es fundamental para el bienestar de la comunidad. La fundadora, 
+            Petronila Gonzales, una farmacéutica apasionada con décadas de experiencia, sintió la necesidad apremiante 
+            de ofrecer un espacio donde los individuos pudieran recibiratención personalizada y acceder a medicamentos
+            de calidad con facilidad. <br><br>
+  
+            El objetivo inicial era simple pero poderoso: establecer un punto de referencia en la comunidad 
+            para la atención farmacéutica centrada en el paciente. La fundadora, después de años de trabajar 
+            en diversas farmacias y comprender las necesidades específicas de la comunidad, decidió dar un 
+            paso audaz y fundar su propia farmacia.
+            Desde sus primeros días, VitalPharm se comprometió a proporcionar servicios que trascienden la 
+            simple dispensación de medicamentos. La farmacia se convirtió en un lugar donde la gente podía 
+            recibir asesoramiento farmacéutico personalizado, educación sobre el manejo de enfermedades 
+            crónicas y apoyo continuo en su búsqueda de una vida más saludable.A lo largo de los años, la 
+            farmacia ha evolucionado para adaptarse a las cambiantes necesidades de la comunidad. 
+            La incorporación de tecnología de vanguardia, la expansión de servicios de atención al paciente 
+            y la colaboración con profesionales de la salud locales son testimonios de la dedicación constante 
+            para proporcionar un cuidado integral. <br><br>
+  
+            Hoy en día, VitalPharm se erige como un faro de confianza y compasión en la comunidad. La farmacia 
+            ha superado desafíos y ha celebrado triunfos, pero su esencia sigue siendo la misma: brindar un 
+            servicio farmacéutico de calidad que no solo trata las enfermedades, sino que también nutre la relación 
+            de la farmacia con la comunidad. Cada paso dado desde la fundación ha estado guiado por la premisa 
+            de mejorar la salud y el bienestar de aquellos a quienes servimos. VitalPharm sigue siendo un testimonio 
+            vivo de cómo una visión apasionada y el compromiso con la atención al paciente pueden florecer y dejar 
+            un impacto duradero en la salud de la comunidad.
+          </p>
+        </div>
+      </section>
     <section id="about">
       <div>
         <img src="/img/ola2.svg" alt="">
@@ -100,12 +100,79 @@
       </div>
     </section>
     <section class="text-center my-5" id="services">
-      <h1 class="text-light">Servicios</h1>
+      <div>
+        <h1 class="text-dark my-5">Servicios</h1>
+      </div>
+      <div class="cards">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Dispensacion de medicamentos</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+  
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Asesoriamiento farmaceutico</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+  
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Laboratorio</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
 
+        <div class="cards_reverse">
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Laboratorio</h5>
+              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Laboratorio</h5>
+              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Laboratorio</h5>
+              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="contact">
       <h1>Contactanos</h1>
     </section>
+    <footer>
+      <h1>foot</h1>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
