Modificando por completo la parte del home y un poco de services

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="#home">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">Sobre nosotros</a>
@@ -40,40 +40,8 @@
         </div>
       </nav>
       <section id="home">
-        <div id="container-home" class="">
-          <h1 class="fw-bold fs-1 text-center mb-4">Origen y Fundacion</h1>
-          <p class="fs-5">
-            La farmacia VitalPharm tuvo sus humildes comienzos en el corazón de nuestra comunidad. Fundada en 2015, 
-            la farmacia ha sido un pilar esencial en el cuidado de la salud local, sirviendo como un faro de atención 
-            y asesoramiento farmacéutico para generaciones de residentes.
-            La visión detrás de la creación de VitalPharm se arraiga en la firme creencia de que el acceso a 
-            servicios farmacéuticos de calidad es fundamental para el bienestar de la comunidad. La fundadora, 
-            Petronila Gonzales, una farmacéutica apasionada con décadas de experiencia, sintió la necesidad apremiante 
-            de ofrecer un espacio donde los individuos pudieran recibiratención personalizada y acceder a medicamentos
-            de calidad con facilidad. <br><br>
-  
-            El objetivo inicial era simple pero poderoso: establecer un punto de referencia en la comunidad 
-            para la atención farmacéutica centrada en el paciente. La fundadora, después de años de trabajar 
-            en diversas farmacias y comprender las necesidades específicas de la comunidad, decidió dar un 
-            paso audaz y fundar su propia farmacia.
-            Desde sus primeros días, VitalPharm se comprometió a proporcionar servicios que trascienden la 
-            simple dispensación de medicamentos. La farmacia se convirtió en un lugar donde la gente podía 
-            recibir asesoramiento farmacéutico personalizado, educación sobre el manejo de enfermedades 
-            crónicas y apoyo continuo en su búsqueda de una vida más saludable.A lo largo de los años, la 
-            farmacia ha evolucionado para adaptarse a las cambiantes necesidades de la comunidad. 
-            La incorporación de tecnología de vanguardia, la expansión de servicios de atención al paciente 
-            y la colaboración con profesionales de la salud locales son testimonios de la dedicación constante 
-            para proporcionar un cuidado integral. <br><br>
-  
-            Hoy en día, VitalPharm se erige como un faro de confianza y compasión en la comunidad. La farmacia 
-            ha superado desafíos y ha celebrado triunfos, pero su esencia sigue siendo la misma: brindar un 
-            servicio farmacéutico de calidad que no solo trata las enfermedades, sino que también nutre la relación 
-            de la farmacia con la comunidad. Cada paso dado desde la fundación ha estado guiado por la premisa 
-            de mejorar la salud y el bienestar de aquellos a quienes servimos. VitalPharm sigue siendo un testimonio 
-            vivo de cómo una visión apasionada y el compromiso con la atención al paciente pueden florecer y dejar 
-            un impacto duradero en la salud de la comunidad.
-          </p>
-        </div>
+          <h1 class="fw-bold text-center text-light">Bienvenido a VitalPharm</h1>
+          <h2 class="fw-bold text-center text-light">Tu bienestar, nuestra prioridad</h2>
       </section>
     <section id="about">
       <div>
@@ -94,7 +62,7 @@
               soluta aperiam.</p>
           </div>
           <div class="doc col-5">
-              <img src="/img/doctor.jpg"alt="">
+              <img src="/img/doctor.jpg"alt="doctor">
           </div>
         </div>
       </div>
@@ -166,6 +134,7 @@
           </div>
         </div>
       </div>
+      <button><a href="#contact">Contactanos</a></button>
     </section>
     <section id="contact">
       <h1>Contactanos</h1>
