--- a/index.html
+++ b/index.html
@@ -72,69 +72,49 @@
         <h1 class="text-dark my-5">Servicios</h1>
       </div>
       <div class="cards">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 18rem; height: 15rem;">
           <div class="card-body">
-            <h5 class="card-title">Dispensacion de medicamentos</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
           </div>
+          <h5 class="card-title">Dispensacion de medicamentos</h5>
+
         </div>
   
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Asesoriamiento farmaceutico</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
           </div>
+          <h5 class="card-title">Asesoriamiento farmaceutico</h5>
+
         </div>
   
         <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Laboratorio</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
           </div>
+          <h5 class="card-title">Laboratorio</h5>
         </div>
 
         <div class="cards_reverse">
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 18rem; height: 15rem;">
             <div class="card-body">
-              <h5 class="card-title">Laboratorio</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
             </div>
+            <h5 class="card-title">Laboratorio</h5>
           </div>
 
           <div class="card" style="width: 18rem;">
             <div class="card-body">
-              <h5 class="card-title">Laboratorio</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
             </div>
+            <h5 class="card-title">Laboratorio</h5>
           </div>
 
           <div class="card" style="width: 18rem;">
             <div class="card-body">
-              <h5 class="card-title">Laboratorio</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
             </div>
+            <h5 class="card-title">Laboratorio</h5>
           </div>
+
+
         </div>
       </div>
-      
+
     </section>
     <section id="contact">
       <h1>Contactanos</h1>
